force-app/main/default/objects/Enquiry__c/fields/Destination_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Line_1__c</fullName>
    <label>Destination Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>