force-app/main/default/objects/Enquiry__c/fields/Destination_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Line_2__c</fullName>
    <label>Destination Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>