force-app/main/default/objects/Enquiry__c/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>