force-app/main/default/objects/Enquiry__c/fields/Destination_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Postal_Code__c</fullName>
    <label>Destination Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>