force-app/main/default/objects/Enquiry__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Household Goods</fullName>
            </value>
            <value>
                <fullName>Office Relocations</fullName>
            </value>
            <value>
                <fullName>Global Mobility Services</fullName>
            </value>
            <value>
                <fullName>Corporate &amp; Residential Leasing</fullName>
            </value>
            <value>
                <fullName>Design &amp; Build</fullName>
            </value>
            <value>
                <fullName>Fine-Art Logistic</fullName>
            </value>
            <value>
                <fullName>Information Management</fullName>
            </value>
            <value>
                <fullName>Door To Door</fullName>
            </value>
            <value>
                <fullName>Door To Port</fullName>
            </value>
            <value>
                <fullName>Port To Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>