force-app/main/default/objects/Enquiry__c/fields/Estimated_Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Insurance_Value__c</fullName>
    <label>Estimated Insurance Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>