force-app/main/default/objects/Enquiry__c/fields/Is_Lift_Available_at_Destination__c.field-meta.xml
<CustomField>
    <fullName>Is_Lift_Available_at_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lift Available at Destination</label>
    <type>Checkbox</type>
</CustomField>