force-app/main/default/objects/Enquiry__c/fields/Origin_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Line_2__c</fullName>
    <label>Origin Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>