force-app/main/default/objects/Enquiry__c/fields/Origin_Floor__c.field-meta.xml
<CustomField>
    <fullName>Origin_Floor__c</fullName>
    <label>Origin Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground Floor</fullName>
            </value>
            <value>
                <fullName>1st Floor</fullName>
            </value>
            <value>
                <fullName>2nd Floor</fullName>
            </value>
            <value>
                <fullName>3rd Floor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>