force-app/main/default/objects/Enquiry__c/fields/Origin_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Postal_Code__c</fullName>
    <label>Origin Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>