force-app/main/default/objects/Enquiry__c/fields/Preferred_Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Delivery__c</fullName>
    <label>Preferred Date of Delivery</label>
    <type>Date</type>
</CustomField>