force-app/main/default/objects/Enquiry__c/fields/Preferred_Date_of_Moving__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Moving__c</fullName>
    <label>Preferred Date of Moving</label>
    <type>Date</type>
</CustomField>