force-app/main/default/objects/Enquiry__c/fields/Preferred_Date_of_Packing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Packing__c</fullName>
    <label>Preferred Date of Packing</label>
    <type>Date</type>
</CustomField>