force-app/main/default/objects/Enquiry__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pre-Move Survey Planning</fullName>
            </value>
            <value>
                <fullName>Pre Move Survey Allocation &amp; Scheduling</fullName>
            </value>
            <value>
                <fullName>Pre Move Survey Report Submission</fullName>
            </value>
            <value>
                <fullName>Pre Move Survey Verification &amp; Feedback from Client</fullName>
            </value>
            <value>
                <fullName>Operational Costing Report Submission</fullName>
            </value>
            <value>
                <fullName>Pre Move Survey Report &amp; Project Costing Analysis</fullName>
            </value>
            <value>
                <fullName>Quote Preparation</fullName>
            </value>
            <value>
                <fullName>Quote Submission</fullName>
            </value>
            <value>
                <fullName>Sales Follow Up on Quote submitted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>