force-app/main/default/objects/Enquiry__c/fields/Storage_Required__c.field-meta.xml
<CustomField>
    <fullName>Storage_Required__c</fullName>
    <label>Storage Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>