force-app/main/default/objects/Enquiry__c/fields/Surveyor_Name__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surveyor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquirys (Surveyor Name)</relationshipLabel>
    <relationshipName>Enquirys2</relationshipName>
    <type>Lookup</type>
</CustomField>