force-app/main/default/objects/Enquiry__c/fields/Telephone_No__c.field-meta.xml
<CustomField>
    <fullName>Telephone_No__c</fullName>
    <label>Telephone No</label>
    <type>Phone</type>
</CustomField>