force-app/main/default/objects/Enquiry__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries(User Name)</relationshipLabel>
    <relationshipName>Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>