force-app/main/default/objects/Enquiry__c/recordTypes/Domestic_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Enquiry</fullName>
    <active>true</active>
    <label>Domestic Enquiry</label>
</RecordType>