force-app/main/default/objects/Enquiry__c/recordTypes/International_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>International_Enquiry</fullName>
    <active>true</active>
    <label>International  Enquiry</label>
</RecordType>