force-app/main/default/objects/Enquiry__c/validationRules/past_date_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>past_date_is_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Preferred_Date_of_Delivery__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Preferred_Date_of_Delivery__c</errorDisplayField>
    <errorMessage>past_date_is_not_allowed</errorMessage>
</ValidationRule>