force-app/main/default/objects/Enquiry__c/validationRules/preferred_date_of_moving.validationRule-meta.xml
<ValidationRule>
    <fullName>preferred_date_of_moving</fullName>
    <active>true</active>
    <errorConditionFormula>Preferred_Date_of_Moving__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Preferred_Date_of_Moving__c</errorDisplayField>
    <errorMessage>past_date_is_not_allowed</errorMessage>
</ValidationRule>