force-app/main/default/objects/Enquiry__c/validationRules/preferred_date_of_packing.validationRule-meta.xml
<ValidationRule>
    <fullName>preferred_date_of_packing</fullName>
    <active>true</active>
    <errorConditionFormula>Preferred_Date_of_Packing__c   &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Preferred_Date_of_Packing__c</errorDisplayField>
    <errorMessage>past_date_is_not_allowed</errorMessage>
</ValidationRule>