force-app/main/default/objects/Enquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enquiry_Type__c</columns>
    <columns>Surveyor_Name__c</columns>
    <columns>User_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Preferred_Date_of_Delivery__c</columns>
    <columns>Preferred_Date_of_Moving__c</columns>
    <columns>Preferred_Date_of_Packing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>